[gd_scene load_steps=5 format=3 uid="uid://b8b0632vg1gmp"]

[ext_resource type="Script" path="res://spell_book.gd" id="1_abpy5"]
[ext_resource type="Texture2D" uid="uid://bugd6u0n6u1ml" path="res://images/spellbook/default.png" id="1_f04gx"]
[ext_resource type="Texture2D" uid="uid://bjtsnt1ln3m4c" path="res://images/spellbook/book.png" id="2_1jcky"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnr43"]
bg_color = Color(1, 0.831373, 0.643137, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.243137, 0.141176, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="SpellBook" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 280.0
offset_right = 1000.0
offset_bottom = 497.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_abpy5")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_right = 360.0
offset_bottom = 501.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dnr43")

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 360.0
offset_right = 720.0
offset_bottom = 501.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dnr43")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 501.0
texture = ExtResource("2_1jcky")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 26.0
offset_right = 360.0
offset_bottom = 450.0

[node name="Page1" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spell1" type="VBoxContainer" parent="MarginContainer/Page1"]
layout_mode = 2
alignment = 1

[node name="SpellName" type="Label" parent="MarginContainer/Page1/Spell1"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spell Name
"
horizontal_alignment = 1

[node name="SpellImage" type="TextureRect" parent="MarginContainer/Page1/Spell1"]
layout_mode = 2
texture = ExtResource("1_f04gx")

[node name="SpellDescription" type="Label" parent="MarginContainer/Page1/Spell1"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spell Description"
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 40.0
offset_right = 693.0
offset_bottom = 453.0
theme_override_constants/margin_bottom = 20

[node name="Page2" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Spell2" type="VBoxContainer" parent="MarginContainer2/Page2"]
layout_mode = 2
alignment = 1

[node name="SpellName" type="Label" parent="MarginContainer2/Page2/Spell2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spell Name
"
horizontal_alignment = 1

[node name="SpellImage" type="TextureRect" parent="MarginContainer2/Page2/Spell2"]
layout_mode = 2
texture = ExtResource("1_f04gx")

[node name="SpellDescription" type="Label" parent="MarginContainer2/Page2/Spell2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spell Description"
autowrap_mode = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 432.0
offset_right = 93.0
offset_bottom = 463.0
text = "Back"

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 433.0
offset_right = 672.0
offset_bottom = 464.0
text = "Next"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
